native/include/mosaic.h

typedef enum mosaic_status {
    MOSAIC_OK = 0,
    MOSAIC_ERROR_INVALID_ARGUMENT = 1,
    MOSAIC_ERROR_IO = 2,
    MOSAIC_ERROR_INVALID_PACK = 3,
    MOSAIC_ERROR_OUT_OF_MEMORY = 4,
    MOSAIC_ERROR_OVERFLOW = 5,
    MOSAIC_ERROR_UNKNOWN_TOKEN_ID = 6,
    MOSAIC_ERROR_INTERNAL = 7,
    MOSAIC_ERROR_CONFLICT = 8,
    MOSAIC_ERROR_RESOURCE_LIMIT = 9,
    MOSAIC_ERROR_UNSUPPORTED = 10,
    MOSAIC_ERROR_NOT_FOUND = 11,
    MOSAIC_ERROR_INTEGRITY = 12,
    MOSAIC_ERROR_STATE = 13,
    MOSAIC_ERROR_UNTRUSTED = 14,
    MOSAIC_ERROR_REVOKED = 15
} mosaic_status;
typedef struct mosaic_tokenizer mosaic_tokenizer;
typedef struct mosaic_online_stream mosaic_online_stream;
typedef struct mosaic_token_document mosaic_token_document;
typedef struct mosaic_executor mosaic_executor;
typedef struct mosaic_token {
    uint32_t id;
    uint64_t start;
    uint64_t length;
    int32_t cost;
} mosaic_token;
typedef struct mosaic_document_token {
    uint32_t id;
    uint64_t start;
    uint64_t length;
} mosaic_document_token;
typedef struct mosaic_range {
    uint64_t start;
    uint64_t length;
} mosaic_range;
typedef struct mosaic_security_finding {
    uint32_t kind;
    uint16_t script_id;
    uint16_t reserved;
    uint64_t start;
    uint64_t length;
} mosaic_security_finding;
typedef enum mosaic_normalization_mode {
    MOSAIC_NORMALIZE_PRESERVE = 0,
    MOSAIC_NORMALIZE_NFD = 1,
    MOSAIC_NORMALIZE_NFC = 2,
    MOSAIC_NORMALIZE_NFKD = 3,
    MOSAIC_NORMALIZE_NFKC = 4,
    MOSAIC_NORMALIZE_NFKC_CASEFOLD = 5
} mosaic_normalization_mode;
typedef struct mosaic_normalized_view {
    uint8_t *bytes;
    size_t byte_length;
    mosaic_normalized_unit *units;
    size_t unit_count;
    mosaic_range *source_spans;
    size_t source_span_count;
} mosaic_normalized_view;
typedef struct mosaic_lex_token {
    uint32_t kind;
    uint32_t flags;
    uint64_t start;
    uint64_t length;
} mosaic_lex_token;
typedef struct mosaic_observer_config {
    uint32_t struct_size;
    uint32_t flags;
    uint32_t event_mask;
    uint32_t reserved;
    mosaic_observer_callback callback;
    void *context;
} mosaic_observer_config;
typedef struct mosaic_runtime_limits {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_input_bytes;
    uint64_t max_output_tokens;
    uint64_t max_token_document_bytes;
} mosaic_runtime_limits;
typedef struct mosaic_runtime_metrics {
    uint64_t encode_calls;
    uint64_t decode_calls;
    uint64_t bytes_in;
    uint64_t bytes_out;
    uint64_t tokens_out;
    uint64_t failures;
    uint64_t resource_rejections;
} mosaic_runtime_metrics;
typedef struct mosaic_batch_input {
    const uint8_t *data;
    size_t length;
} mosaic_batch_input;
typedef struct mosaic_batch_result {
    mosaic_status status;
    uint32_t *ids;
    size_t count;
} mosaic_batch_result;
typedef struct mosaic_executor_config {
    uint32_t struct_size;
    uint32_t flags;
    uint32_t worker_count;
    uint32_t queue_capacity;
    uint64_t max_batch_items;
    uint64_t max_total_input_bytes;
} mosaic_executor_config;
typedef struct mosaic_executor_metrics {
    uint64_t batches;
    uint64_t items;
    uint64_t succeeded_items;
    uint64_t failed_items;
    uint64_t input_bytes;
} mosaic_executor_metrics;
typedef struct mosaic_detection {
    uint32_t matched;
    uint32_t available;
    int64_t score;
    int64_t margin;
    char language[64];
} mosaic_detection;
typedef struct mosaic_token_document_options {
    uint32_t struct_size;
    uint32_t flags;
    mosaic_normalization_mode normalization_mode;
    uint32_t reserved;
} mosaic_token_document_options;
typedef struct mosaic_tokenizer_capabilities {
    uint32_t struct_size;
    uint32_t reserved;
    uint64_t available;
} mosaic_tokenizer_capabilities;
typedef struct mosaic_token_document_info {
    uint32_t flags;
    uint64_t source_length;
    uint64_t model_token_count;
    uint64_t grapheme_count;
    uint64_t security_finding_count;
    uint64_t normalized_byte_length;
    uint64_t normalized_unit_count;
    uint64_t lexical_token_count;
    uint64_t semantic_component_count;
    mosaic_normalization_mode normalization_mode;
    uint32_t reserved;
    uint8_t source_sha256[32];
    uint8_t tokenizer_fingerprint_sha256[32];
    mosaic_detection detection;
} mosaic_token_document_info;
/* Returned buffers are owned by Mosaic and released with mosaic_free(). */
MOSAIC_API void mosaic_free(void *pointer);
MOSAIC_API const char *mosaic_version_string(void);
MOSAIC_API const char *mosaic_status_string(mosaic_status status);
MOSAIC_API mosaic_status mosaic_tokenizer_load_files(const char *model_path, const char *unicode_path,
                                          mosaic_tokenizer **out_tokenizer);
MOSAIC_API mosaic_status mosaic_tokenizer_add_language_file(mosaic_tokenizer *tokenizer, const char *path);
MOSAIC_API mosaic_status mosaic_tokenizer_set_detector_file(mosaic_tokenizer *tokenizer, const char *path);
MOSAIC_API mosaic_status mosaic_tokenizer_set_security_file(mosaic_tokenizer *tokenizer, const char *path);
MOSAIC_API mosaic_status mosaic_tokenizer_security_scan(const mosaic_tokenizer *tokenizer,
                                              const uint8_t *input, size_t input_len,
                                              mosaic_security_finding **out_findings, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_set_normalization_file(mosaic_tokenizer *tokenizer, const char *path);
MOSAIC_API mosaic_status mosaic_tokenizer_normalize(const mosaic_tokenizer *tokenizer, mosaic_normalization_mode mode,
                                         const uint8_t *input, size_t input_len, mosaic_normalized_view *out_view);
MOSAIC_API mosaic_status mosaic_tokenizer_set_lexer_file(mosaic_tokenizer *tokenizer, const char *path);
MOSAIC_API mosaic_status mosaic_tokenizer_lex(const mosaic_tokenizer *tokenizer, const uint8_t *input, size_t input_len,
                                   mosaic_lex_token **out_tokens, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_detect_language(const mosaic_tokenizer *tokenizer,
                                               const uint8_t *input, size_t input_len,
                                               mosaic_detection *out_detection);
MOSAIC_API mosaic_status mosaic_tokenizer_encode_auto(const mosaic_tokenizer *tokenizer,
                                           const uint8_t *input, size_t input_len,
                                           uint32_t **out_ids, size_t *out_count,
                                           mosaic_detection *out_detection);
MOSAIC_API void mosaic_tokenizer_free(mosaic_tokenizer *tokenizer);
/* Stable SHA-256 fingerprint of semantic runtime version + exact loaded pack bytes. */

/* Optional privacy-preserving synchronous observer. Configure before sealing. The callback may be
 * invoked concurrently and MUST be thread-safe; events never contain source bytes or token surfaces. */
MOSAIC_API mosaic_status mosaic_tokenizer_set_observer(mosaic_tokenizer *tokenizer, const mosaic_observer_config *config);
/* Runtime policy and immutable publication. Configure before sealing, then share read-only across threads. */
MOSAIC_API void mosaic_runtime_limits_default(mosaic_runtime_limits *out_limits);
MOSAIC_API mosaic_status mosaic_tokenizer_set_runtime_limits(mosaic_tokenizer *tokenizer, const mosaic_runtime_limits *limits);
MOSAIC_API mosaic_status mosaic_tokenizer_get_runtime_limits(const mosaic_tokenizer *tokenizer, mosaic_runtime_limits *out_limits);
MOSAIC_API mosaic_status mosaic_tokenizer_seal(mosaic_tokenizer *tokenizer);
MOSAIC_API int mosaic_tokenizer_is_sealed(const mosaic_tokenizer *tokenizer);
MOSAIC_API mosaic_status mosaic_tokenizer_get_metrics(const mosaic_tokenizer *tokenizer, mosaic_runtime_metrics *out_metrics);
MOSAIC_API mosaic_status mosaic_tokenizer_runtime_identity(const mosaic_tokenizer *tokenizer, uint8_t out_sha256[32]);
MOSAIC_API mosaic_status mosaic_tokenizer_reset_metrics(mosaic_tokenizer *tokenizer);
MOSAIC_API mosaic_status mosaic_tokenizer_fingerprint(const mosaic_tokenizer *tokenizer, uint8_t out_sha256[32]);
MOSAIC_API mosaic_status mosaic_tokenizer_get_capabilities(const mosaic_tokenizer *tokenizer, mosaic_tokenizer_capabilities *out_capabilities);
MOSAIC_API mosaic_status mosaic_tokenizer_encode(const mosaic_tokenizer *tokenizer, const uint8_t *input, size_t input_len,
                                      uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_encode_tokens(const mosaic_tokenizer *tokenizer, const uint8_t *input, size_t input_len,
                                             mosaic_token **out_tokens, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_decode(const mosaic_tokenizer *tokenizer, const uint32_t *ids, size_t count,
                                      uint8_t **out_bytes, size_t *out_len);
MOSAIC_API mosaic_status mosaic_tokenizer_grapheme_ranges(const mosaic_tokenizer *tokenizer,
                                               const uint8_t *input, size_t input_len,
                                               mosaic_range **out_ranges, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_token_document_create_ex(const mosaic_tokenizer *tokenizer,
                                                          const uint8_t *input, size_t input_len,
                                                          const mosaic_token_document_options *options,
                                                          mosaic_token_document **out_document);
MOSAIC_API mosaic_status mosaic_token_document_get_info(const mosaic_token_document *document, mosaic_token_document_info *out_info);
MOSAIC_API mosaic_status mosaic_token_document_serialize(const mosaic_token_document *document, uint8_t **out_bytes, size_t *out_len);
MOSAIC_API mosaic_status mosaic_token_document_deserialize(const uint8_t *bytes, size_t len, mosaic_token_document **out_document);
MOSAIC_API mosaic_status mosaic_token_document_copy_source(const mosaic_token_document *document, uint8_t **out_bytes, size_t *out_len);
MOSAIC_API mosaic_status mosaic_token_document_model_tokens(const mosaic_token_document *document,
                                                  mosaic_document_token **out_tokens, size_t *out_count);
/* Reusable bounded parallel executor. The tokenizer must be sealed before submission.
 * Batch calls may execute concurrently on one executor; result order always matches input order.
 * The caller must not free the executor while a batch call is active. */
MOSAIC_API void mosaic_executor_config_default(mosaic_executor_config *out_config);
MOSAIC_API mosaic_status mosaic_executor_create(const mosaic_executor_config *config, mosaic_executor **out_executor);
MOSAIC_API mosaic_status mosaic_executor_encode_batch(mosaic_executor *executor, const mosaic_tokenizer *tokenizer,
                                           const mosaic_batch_input *inputs, size_t input_count,
                                           mosaic_batch_result **out_results);
MOSAIC_API void mosaic_batch_results_free(mosaic_batch_result *results, size_t count);
MOSAIC_API mosaic_status mosaic_executor_get_metrics(const mosaic_executor *executor, mosaic_executor_metrics *out_metrics);
MOSAIC_API void mosaic_executor_free(mosaic_executor *executor);
MOSAIC_API void mosaic_token_document_free(mosaic_token_document *document);
MOSAIC_API mosaic_status mosaic_tokenizer_online_stream_create(const mosaic_tokenizer *tokenizer, size_t max_pending_bytes,
                                                     mosaic_online_stream **out_stream);
MOSAIC_API mosaic_status mosaic_online_stream_push(mosaic_online_stream *stream, const uint8_t *bytes, size_t len,
                                        size_t *out_consumed, uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_online_stream_finish(mosaic_online_stream *stream, uint32_t **out_ids, size_t *out_count);
MOSAIC_API size_t mosaic_online_stream_pending_bytes(const mosaic_online_stream *stream);
MOSAIC_API void mosaic_online_stream_free(mosaic_online_stream *stream);
MOSAIC_API void mosaic_normalized_view_free(mosaic_normalized_view *view);