bindings/python/mosaic/_ffi.py


def configure_library(lib: C.CDLL) -> None:
    u8p = C.POINTER(C.c_uint8); u32p = C.POINTER(C.c_uint32)
    pp_u32 = C.POINTER(u32p); pp_u8 = C.POINTER(u8p)
    lib.mosaic_version_string.restype = C.c_char_p
    lib.mosaic_status_string.argtypes = [C.c_int]; lib.mosaic_status_string.restype = C.c_char_p
    lib.mosaic_free.argtypes = [C.c_void_p]
    lib.mosaic_tokenizer_load_files.argtypes = [C.c_char_p, C.c_char_p, C.POINTER(C.c_void_p)]; lib.mosaic_tokenizer_load_files.restype = C.c_int
    for name in ("mosaic_tokenizer_add_language_file", "mosaic_tokenizer_set_detector_file", "mosaic_tokenizer_set_security_file",
                 "mosaic_tokenizer_set_normalization_file", "mosaic_tokenizer_set_lexer_file"):
        fn = getattr(lib, name); fn.argtypes = [C.c_void_p, C.c_char_p]; fn.restype = C.c_int
    lib.mosaic_tokenizer_free.argtypes = [C.c_void_p]
    lib.mosaic_tokenizer_fingerprint.argtypes = [C.c_void_p, u8p]; lib.mosaic_tokenizer_fingerprint.restype = C.c_int
    lib.mosaic_tokenizer_runtime_identity.argtypes = [C.c_void_p, u8p]; lib.mosaic_tokenizer_runtime_identity.restype = C.c_int
    lib.mosaic_tokenizer_get_capabilities.argtypes = [C.c_void_p, C.POINTER(CTokenizerCapabilities)]; lib.mosaic_tokenizer_get_capabilities.restype = C.c_int
    lib.mosaic_runtime_limits_default.argtypes = [C.POINTER(CRuntimeLimits)]
    lib.mosaic_tokenizer_set_runtime_limits.argtypes = [C.c_void_p, C.POINTER(CRuntimeLimits)]; lib.mosaic_tokenizer_set_runtime_limits.restype = C.c_int
    lib.mosaic_tokenizer_get_runtime_limits.argtypes = [C.c_void_p, C.POINTER(CRuntimeLimits)]; lib.mosaic_tokenizer_get_runtime_limits.restype = C.c_int
    lib.mosaic_tokenizer_seal.argtypes = [C.c_void_p]; lib.mosaic_tokenizer_seal.restype = C.c_int
    lib.mosaic_tokenizer_is_sealed.argtypes = [C.c_void_p]; lib.mosaic_tokenizer_is_sealed.restype = C.c_int
    lib.mosaic_tokenizer_get_metrics.argtypes = [C.c_void_p, C.POINTER(CRuntimeMetrics)]; lib.mosaic_tokenizer_get_metrics.restype = C.c_int
    lib.mosaic_tokenizer_reset_metrics.argtypes = [C.c_void_p]; lib.mosaic_tokenizer_reset_metrics.restype = C.c_int
    lib.mosaic_tokenizer_encode.argtypes = [C.c_void_p, u8p, C.c_size_t, pp_u32, C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_encode.restype = C.c_int
    lib.mosaic_tokenizer_encode_tokens.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(C.POINTER(CToken)), C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_encode_tokens.restype = C.c_int
    lib.mosaic_tokenizer_decode.argtypes = [C.c_void_p, u32p, C.c_size_t, pp_u8, C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_decode.restype = C.c_int
    lib.mosaic_tokenizer_online_stream_create.argtypes = [C.c_void_p, C.c_size_t, C.POINTER(C.c_void_p)]; lib.mosaic_tokenizer_online_stream_create.restype = C.c_int
    lib.mosaic_online_stream_push.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(C.c_size_t), pp_u32, C.POINTER(C.c_size_t)]; lib.mosaic_online_stream_push.restype = C.c_int
    lib.mosaic_online_stream_finish.argtypes = [C.c_void_p, pp_u32, C.POINTER(C.c_size_t)]; lib.mosaic_online_stream_finish.restype = C.c_int
    lib.mosaic_online_stream_pending_bytes.argtypes = [C.c_void_p]; lib.mosaic_online_stream_pending_bytes.restype = C.c_size_t
    lib.mosaic_online_stream_free.argtypes = [C.c_void_p]
    lib.mosaic_tokenizer_detect_language.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(CDetection)]; lib.mosaic_tokenizer_detect_language.restype = C.c_int
    lib.mosaic_tokenizer_encode_auto.argtypes = [C.c_void_p, u8p, C.c_size_t, pp_u32, C.POINTER(C.c_size_t), C.POINTER(CDetection)]; lib.mosaic_tokenizer_encode_auto.restype = C.c_int
    lib.mosaic_tokenizer_grapheme_ranges.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(C.POINTER(CRange)), C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_grapheme_ranges.restype = C.c_int
    lib.mosaic_tokenizer_security_scan.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(C.POINTER(CSecurityFinding)), C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_security_scan.restype = C.c_int
    lib.mosaic_tokenizer_normalize.argtypes = [C.c_void_p, C.c_uint32, u8p, C.c_size_t, C.POINTER(CNormalizedView)]; lib.mosaic_tokenizer_normalize.restype = C.c_int
    lib.mosaic_normalized_view_free.argtypes = [C.POINTER(CNormalizedView)]
    lib.mosaic_tokenizer_lex.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(C.POINTER(CLexToken)), C.POINTER(C.c_size_t)]; lib.mosaic_tokenizer_lex.restype = C.c_int
    lib.mosaic_tokenizer_token_document_create_ex.argtypes = [C.c_void_p, u8p, C.c_size_t, C.POINTER(CTokenDocumentOptions), C.POINTER(C.c_void_p)]; lib.mosaic_tokenizer_token_document_create_ex.restype = C.c_int
    lib.mosaic_token_document_get_info.argtypes = [C.c_void_p, C.POINTER(CTokenDocumentInfo)]; lib.mosaic_token_document_get_info.restype = C.c_int
    lib.mosaic_token_document_copy_source.argtypes = [C.c_void_p, pp_u8, C.POINTER(C.c_size_t)]; lib.mosaic_token_document_copy_source.restype = C.c_int
    lib.mosaic_token_document_model_tokens.argtypes = [C.c_void_p, C.POINTER(C.POINTER(CDocumentToken)), C.POINTER(C.c_size_t)]; lib.mosaic_token_document_model_tokens.restype = C.c_int
    lib.mosaic_token_document_serialize.argtypes = [C.c_void_p, pp_u8, C.POINTER(C.c_size_t)]; lib.mosaic_token_document_serialize.restype = C.c_int
    lib.mosaic_token_document_deserialize.argtypes = [u8p, C.c_size_t, C.POINTER(C.c_void_p)]; lib.mosaic_token_document_deserialize.restype = C.c_int
    lib.mosaic_token_document_free.argtypes = [C.c_void_p]
    lib.mosaic_executor_config_default.argtypes = [C.POINTER(CExecutorConfig)]
    lib.mosaic_executor_create.argtypes = [C.POINTER(CExecutorConfig), C.POINTER(C.c_void_p)]; lib.mosaic_executor_create.restype = C.c_int
    lib.mosaic_executor_encode_batch.argtypes = [C.c_void_p, C.c_void_p, C.POINTER(CBatchInput), C.c_size_t, C.POINTER(C.POINTER(CBatchResult))]; lib.mosaic_executor_encode_batch.restype = C.c_int
    lib.mosaic_batch_results_free.argtypes = [C.POINTER(CBatchResult), C.c_size_t]
    lib.mosaic_executor_get_metrics.argtypes = [C.c_void_p, C.POINTER(CExecutorMetrics)]; lib.mosaic_executor_get_metrics.restype = C.c_int
    lib.mosaic_executor_free.argtypes = [C.c_void_p]
    lib.mosaic_tokenizer_set_observer.argtypes = [C.c_void_p, C.POINTER(CObserverConfig)]; lib.mosaic_tokenizer_set_observer.restype = C.c_int
